2007-01-01  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/
	AttributeList_test.java,
	gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/
	DTD_test.java,
	gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/
	TagElement_Test.java,
	gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/
	Text.java: Removed (tests moved).
	gnu/testlet/javax/swing/text/html/parser/AttributeList/
	AttributeListTest2.java,
	gnu/testlet/javax/swing/text/html/parser/DTD/DtdTest2.java,
	gnu/testlet/javax/swing/text/html/parser/ParserDelegator/Text2.java,
	gnu/testlet/javax/swing/text/html/parser/TagElement/
	TagElementTest2.java: New files.

2007-01-01 Audrius Meskauskas <Audrius.Meskauskas@spectraseis.com>

        * gnu/testlet/javax/swing/text/html/parser/ParserDelegator/Entities.java:
        New test.

2006-12-28  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/TestHarness.java
	(check(double,double,double)): New method. Tests two double values
	with a certain threshold.

2006-12-27  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (JAVACFLAGS): Use -1.5.
	* Makefile.in: Regenerated.
	* gnu/testlet/java/awt/Component/getListeners.java: Disable
	non-compiling test.
	* gnu/testlet/javax/swing/table/DefaultTableColumnModel/
	getListeners.java: Likewise.
	* gnu/testlet/java/awt/Container/getListeners.java: Likewise.
	* gnu/testlet/javax/swing/DefaultListSelectionModel/
	getListeners.java: Likewise.
	* gnu/testlet/javax/swing/JComponent/getListeners.java:
	Likewise.
	* gnu/testlet/javax/swing/event/EventListenerList/add.java: Use
	more specific local variable types.
	* gnu/testlet/javax/swing/event/EventListenerList/
	getListenerCount.java: Likewise.
	* gnu/testlet/javax/swing/event/EventListenerList/
	getListenerList.java: Likewise.
	* gnu/testlet/javax/swing/event/EventListenerList/getListeners.java:
	Likewise. Disable non-compiling test.