@@ -1,3 +1,9 @@
+2007-01-02  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
+
+	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/
+	Entity_Test.java: Removed (moved)
+	javax/swing/text/html/parser/ParserDelegator/Entities2.java: New test.
+
 2007-01-01  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
 
 	* gnu/testlet/gnu/javax/swing/text/html/parser/support/Parser/
